added elements to HTML file

--- a/index.html
+++ b/index.html
@@ -27,37 +27,157 @@
 
 <body id="page-top">
 
+  <header></header>
+
+
   <!-- Navigation -->
   <nav class="" id="mainNav">
-    <div class="">
+    <div class="container">
       <a class="" href="">Travel California</a>
-
+    </div>
+    <div>
+      <ul>
+        <li><a href="#">DOWNLOAD</a></li>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <header class="masthead">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <h1>Download the Travel California app and explore California today!</h1>
+        </div>
+        <div class="col-lg-5">
+          <div class="device-container">
+            <div class="device"></div>
+            <div class="screen">
+              <img src="images/demo-screen-1 1.png" alt="An IPhone phone screen with the Travel California webpage">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <!-- Download Section -->
   <section class="download" id="download">
-
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h2 class="section-heading">Discover what all the buzz is about!</h2>
+          <p>Our app is available on any mobile device! Download now to get started!</p>
+        </div>
+        <div class="badges">
+          <a href="" class="badges-link">
+            <img src="images/google-play-badge.png" alt="Google Play badge">
+            <img src="images/app-store-badge.png" alt="App Store badge">
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Testimonials -->
   <section class="testimonials ">
+    <div class="container">
+      <h2>What people are saying...</h2>
+      <div class="row">
+        <div class="card col-lg-4" style="width: 18rem;">
+          <div class="testimonial-item">
+            <img class="card-img-top" src="images/testimonials-1.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Margaret E.</h5>
+            <p class="card-text">This is fantastic! Thanks so much guys!</p>
+          </div>
+          </div>
+        </div>
+        <div class="card col-lg-4" style="width: 18rem;">
+          <div class="testimonial-item">
+            <img class="card-img-top" src="images/testimonials-3.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Sarah S.</h5>
+              <p class="card-text">Travel California is amazing. I've been using it to explore lots of super nice national parks.</p>
+            </div>
+          </div>
+        </div>
+        <div class="card col-lg-4" style="width: 18rem;">
+          <div class="testimonial-item">
+            <img class="card-img-top" src="images/testimonials-2.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Fred W.</h5>
+              <p class="card-text">Thanks so much for making these free resources available to us!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Call to Action -->
   <section class="signup-section" id="signup">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <i></i>
+          <h2>Subscribe to receive updates!</h2>
+          <form action="">
+            <input type="text">
+            <button>Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Contact-->
   <section class="contact-section bg-black">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase">ADDRESS</h4>
+              <div>
+                <p>4923 Market Street, Sacramento</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase">EMAIL</h4>
+              <div>
+                <p>hello@california.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase">PHONE</h4>
+              <div>
+                <p>+1 (800) CALI-FORNIA</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="social">
+        <a href=""><i></i></a>
+        <a href=""><i></i></a>
+        <a href=""><i></i></a>
+      </div>
+    </div>
   </section>
 
   <footer>
     <div class="container">
+      <p>&copy; Imre Vigh 2022. All Rights Reserved.</p>
     </div>
   </footer>
   <!-- Optional JavaScript -->
